--- a/src/main/webapp/addTrainingTopic.html
+++ b/src/main/webapp/addTrainingTopic.html
@@ -127,7 +127,7 @@
                 <table class="fix">
                     <tr>
                         <td>
-                        <table class="table table-borderless tabnone fix" v-for="topic in optionsTopic" v-show="typeof TrainingFilter(topic.name) !== 'undefined' && TrainingFilter(topic.name).length > 0 ">
+                        <table class="table table-borderless tabnone fix" v-for="topic in trainingsChosen">
 
                             <div class="row">
                                 <thead>
@@ -140,11 +140,12 @@
                                 </thead>
                             </div>
                             <div class="row">
-                                <tr v-for="group in TrainingTraim(TrainingFilter(topic.name))">
+
+                                <!--<tr v-for="group in TrainingTraim(TrainingFilter(topic.name))">
                                     <td class="col-lg-3 col-md-3" v-for="training in group">
                                         <button class="btn btn-default btn-group">{{training.trainingTitle}}</button>
                                     </td>
-                                </tr>
+                                </tr>-->
                             </div>
                             </tr>
                         </table>
