[US#GF17] Correction des bugs v-for

--- a/src/main/webapp/addTrainingTopic.html
+++ b/src/main/webapp/addTrainingTopic.html
@@ -128,14 +128,14 @@
 
                     <tr>
                         <td>
-                            <template v-for="grandgroup in allTopicTraining">
-                                <template v-for="group in grandgroup">
+
+
                         <table class="table table-borderless tabnone fix" v-for="topic in trainingsChosen" >
 
                             <div class="row">
                                 <thead>
                                 <tr>
-                                    <th class="col-lg-3 col-md-3">{{group}}</th>
+                                    <th class="col-lg-3 col-md-3">{{topic.name}}</th>
                                     <th class="col-lg-3 col-md-3"></th>
                                     <th class="col-lg-3 col-md-3"></th>
                                     <th class="col-lg-3 col-md-3 deletetopic"><a href="#" class="changecolor"><span class="glyphicon glyphicon-trash"></span> Supprimer ce thème</a></th>
@@ -144,18 +144,19 @@
                             </div>
 
                             <div class="row">
-
-                                <tr >
+                                <template v-for="grandgroup in allTopicTraining">
+                                <tr v-for="group in grandgroup">
                                     <td class="col-lg-3 col-md-3" v-for="training in group">
                                         <button class="btn btn-default btn-group">{{training.trainingTitle}}</button>
                                     </td>
                                 </tr>
+                                </template>
                             </div>
 
                             </tr>
                         </table>
-                                </template>
-                            </template>
+
+
                         </td>
                     </tr>
 
@@ -163,8 +164,8 @@
 
         </div>
     </div><!--Fin row 2-->
-        <!--<button @click="TrainingTraim(TrainingFilter('C'))"></button>
-        <pre>{{$data | json}}</pre>-->
+        <button @click="TrainingTraim(TrainingFilter('C'))"></button>
+        <!--<pre>{{$data | json}}</pre>-->
 </div>
 
 
