[US#GF17] Correction le problème : Tri de thème

--- a/src/main/webapp/addTrainingTopic.html
+++ b/src/main/webapp/addTrainingTopic.html
@@ -157,8 +157,18 @@
                 </table>
         </div>
     </div><!--Fin row 2-->
-        <button>{{ trainingsChosen }}</button>
+        <!--<button>{{ trainingsChosen }}</button>-->
         <!--<pre>{{$data | json}}</pre>-->
+        <div style="width:100px; height:100px; overflow: auto;" >
+            text text text text text text text text text
+            text text text text text text text text text
+            text text text text text text text text text
+            text text text text text text text text text
+            text text text text text text text text text
+            text text text text text text text text text
+            text text text text text text text text text
+            text text text text text text text text text
+        </div>
 </div>
 </div>
 <script src="app/controller/registerTrainingTopic.js"></script>
