--- a/src/main/webapp/addTrainingTopic.html
+++ b/src/main/webapp/addTrainingTopic.html
@@ -6,17 +6,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="css/bootstrap.css">
     <link rel="stylesheet" href="css/addTrainingTopic.css">
+    <link rel="stylesheet" href="css/scroll.css">
 
     <script src="lib/vue.js"></script>
     <script src="lib/vee-validate.js"></script>
     <script src="lib/vue-resource.js"></script>
+    <script src="lib/jquery.tools.min.js"></script>
 
     <title>AjouterFormation</title>
 </head>
 <body>
 <div id="TrainingTopic" v-cloak>
-
-
     <div class="container-fluid">
         <div class="row"><!-- row 1-->
             <div class="col-md-12" style="padding:40px;background-color:#428bca;margin-bottom: 30px;"></div>
@@ -88,7 +88,7 @@
                         <tr>
                             <td colspan="4" class="text-center">
                                 <div>
-                                    <span v-show="!isNewTrainingTitle" class="text-center color-red ">Une formation identique existe déjà.</span>
+                                    <span v-show="!isNewTrainingTitle" class="text-center color-red">Une formation identique existe déjà.</span>
                                     <span v-show="(msgtrainingTitle || msgnumberHalfDays || msgtopic)"
                                           class="text-center color-red ">Veuillez remplir tous les champs.</span>
                                     <span v-show="confirmFormation && isNewTrainingTitle && !(msgtrainingTitle || msgnumberHalfDays || msgtopic)"
@@ -121,16 +121,18 @@
             <div class="col-sm-12 col-md-10 col-lg-7">
 
                 <div class="row">
-
                     <div class="col-lg-7 col-md-7 text-center">
                         <legend>Formation ajoutées</legend>
                     </div>
                 </div>
-                <div style="width: 100%; height: 360px; overflow-y: scroll; border: 1px solid;">
+                <button href="#" class="prev">v</button>
+                <div id="container">
+                <div class="items">
+                <div class="item">
                     <table class="fix tabnonborder">
                         <tbody>
                         <tr>
-                            <td v-show="isEmptyFormation()" >Aucune formation n'a été créé.</td>
+                            <td v-show="isEmptyFormation()" class="text-center color-red">Aucune formation n'a été créé.</td>
                             <td>
                                 <template v-for="grandgroup in allTopicTraining">
                                     <table class="table table-borderless tabnonborder fix">
@@ -164,10 +166,15 @@
                         </tbody>
                     </table>
                 </div>
+                <div class="item"></div>
+                </div>
+                </div>
+                <button href="#" class="next">v</button>
             </div>
         </div><!--Fin row 2-->
     </div>
 </div>
 <script src="app/controller/registerTrainingTopic.js"></script>
+<script src="app/controller/scroll.js"></script>
 </body>
 </html>
