--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -3,170 +3,134 @@
 <head>
     <meta charset="UTF-8">
     <title>Enregistrement collaborateur</title>
-
     <link rel="stylesheet" href="css/bootstrap.css">
     <link rel="stylesheet" href="css/enregistrement.css">
-
     <script src="lib/vue.js"></script>
-    <script src="lib/vee-validate.js"></script>
     <script src="lib/vue-resource.js"></script>
     <script src="lib/vue-router.js"></script>
-
-
 </head>
 <body>
-<div class="container-fluid" id="app" v-cloak >
+<div class="container-fluid" id="app" v-cloak>
     <div class="row">
         <div class="col-md-12" style="padding:40px;background-color:#428bca;margin-bottom: 30px;"></div>
         <div class="col-lg-8 col-sm-12 col-xs-12 col-md-6 col-lg-6 col-lg-offset-3  col-md-offset-3">
             <div class="panel panel-default">
-
-
-
                 <ul class="tab-group">
-                    <li :class="tabinscription"><a @click="tabinscription = 'tab active'; tabconnexion = 'tab';">Inscription</a></li>
-                    <li :class="tabconnexion"><a @click="tabinscription = 'tab'; tabconnexion = 'tab active';"  >Connexion</a></li>
+                    <li :class="tabinscription">
+                        <a @click="tabinscription = 'tab active'; tabconnexion = 'tab';">Inscription</a>
+                    </li>
+                    <li :class="tabconnexion">
+                        <a @click="tabinscription = 'tab'; tabconnexion = 'tab active';">Connexion</a>
+                    </li>
                 </ul>
-
-
                 <div class="panel-body">
-
-
                     <div class="row">
                         <div class="col-xs-12 col-xm-12 col-md-6 cold-lg-6 col-offset-3 col-md-offset-3">
-
                             <form id="register-form" @submit.prevent="verifyForm">
-
                                 <!-- MATRICULE-->
-
-
-                                <div class="form-group" :class="{'input': true,'has-error': errors.has('matricule') || msgmatricule}">
+                                <div class="form-group">
                                     <label for="matricule">Code de login</label>
-
-                                    <div class="inner-addon left-addon">
+                                    <div class="inner-addon left-addon" :class="{'has-error': personnalIdNumber}">
                                         <i class="glyphicon glyphicon-barcode"></i>
-                                        <input type="text" v-validate="'matricule'" id="matricule" name="matricule" tabindex="1" class="form-control has-left-icon"
-                                               placeholder="ABC1234" v-model="collaborator.personnalIdNumber" @focus="isNewPersonalIdNumber = true; msgmatricule = false" @blur="messageMatricule"  onfocus="this.placeholder = ''" onblur="this.placeholder = 'ABC1234' " maxlength="20" minlength="2">
-                                        <span v-show="msgmatricule && !errors.has('matricule')" class="color-red ">Matricule est obligatoire.</span>
-                                        <span v-show="errors.has('matricule')" class="color-red ">{{ errors.first('matricule') }}</span>
+                                        <input type="text" id="matricule" name="matricule" tabindex="1" class="form-control has-left-icon"
+                                               placeholder="ABC1234" v-model="personnalIdNumber" @focus="msgmatricule = false" @blur="messageMatricule"
+                                               onblur="this.placeholder = 'ABC1234' " maxlength="20" minlength="2">
+                                        <span v-show="msgmatricule" class="color-red">Matricule est obligatoire.</span>
                                         <span v-show="!isNewPersonalIdNumber" class="color-red ">Ce code de login a déjà été enregistré.</span>
+                                        <span v-show="personnalIdNumber" class="color-red">{{ matriculeMsg }}</span>
                                     </div>
-
                                 </div>
-
-
                                 <!-- NOM -->
-
-                                <div class="form-group" :class="{'input': true,'has-error': errors.has('nom') || msgnom }">
+                                <div class="form-group" :class="{'has-error': msgnom || lastName}">
                                     <label for="nom">Nom</label>
-
-                                    <div class="inner-addon left-addon" :class="{ 'control': true }">
+                                    <div class="inner-addon left-addon"  >
                                         <i class="glyphicon glyphicon-user"></i>
-                                        <input type="text" v-validate="'nom'" name="nom" id="nom" tabindex="1" class="form-control " placeholder="DUPONT" v-model="collaborator.lastName" onfocus="this.placeholder = ''" onblur="this.placeholder = 'DUPONT'" @focus="msgnom = false" @blur="messageNom"  maxlength="125" minlength="2">
-                                        <span v-show="msgnom && !errors.has('nom')" class="color-red ">Nom est obligatoire.</span>
-                                        <span v-show="errors.has('nom')" class="color-red ">{{ errors.first('nom') }}</span>
+                                        <input type="text" name="nom" id="nom" tabindex="1" class="form-control " placeholder="DUPONT" v-model="lastName"
+                                               onfocus="this.placeholder = ''" onblur="this.placeholder = 'DUPONT'" @focus="msgnom = false" @blur="messageNom"
+                                               maxlength="125" minlength="2">
+                                        <span v-show="msgnom" class="color-red">Nom est obligatoire.</span>
+                                        <span v-show="lastName" class="color-red">{{ lastNameMsg }}</span>
                                     </div>
-
                                 </div>
-
                                 <!-- PRENOM -->
-
-                                <div class="form-group" :class="{'input': true,'has-error': errors.has('prenom') || msgprenom }">
+                                <div class="form-group" :class="{'input': true,'has-error': firstName || msgprenom }">
                                     <label for="prenom">Prénom</label>
-
                                     <div class="inner-addon left-addon" :class="{ 'control': true }">
                                         <i class="glyphicon glyphicon-user"></i>
-                                        <input type="text" v-validate="'prenom'" name="prenom" id="prenom" tabindex="2" class="form-control" placeholder="Eric" v-model="collaborator.firstName" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Eric'" @focus="msgprenom = false" @blur="messagePrenom"  maxlength="125" minlength="2">
-                                        <span v-show="msgprenom && !errors.has('prenom')" class="color-red ">Prénom est obligatoire.</span>
-                                        <span v-show="errors.has('prenom')" class="color-red ">{{ errors.first('prenom') }}</span>
+                                        <input type="text"  name="prenom" id="prenom" tabindex="2" class="form-control" placeholder="Eric" v-model="firstName"
+                                               onfocus="this.placeholder = ''" onblur="this.placeholder = 'Eric'" @focus="msgprenom = false" @blur="messagePrenom"
+                                               maxlength="125" minlength="2">
+                                        <span v-show="msgprenom" class="color-red ">Prénom est obligatoire.</span>
+                                        <span v-show="firstName" class="color-red">{{ firstNameMsg }}</span>
                                     </div>
 
                                 </div>
-
-                                <!-- EMAIL -->
-
-                                <div class="form-group" :class="{'input': true,'has-error': errors.has('email') || msgemail }">
+                                <!-- EMAIL-->
+                                <div class="form-group" :class="{'input': true,'has-error': email || msgemail }">
                                     <label for="email">Email</label>
-
                                     <div class="inner-addon left-addon" :class="{ 'control': true }">
                                         <i class="glyphicon glyphicon-envelope"></i>
-                                        <input type="email" v-validate="'email'" name="email" id="email" tabindex="2" class="form-control" placeholder="eric.dupont@viseo.com"  v-model="collaborator.email" @focus="isNewEmail = true; msgemail = false" @blur="messageEmail" onfocus="this.placeholder = ''" onblur="this.placeholder = 'eric.dupont@viseo.com'">
-                                        <span v-show="msgemail && !errors.has('email')" class="color-red ">Email est obligatoire.</span>
-                                        <span v-show="errors.has('email')" class="color-red ">{{ errors.first('email') }}</span>
+                                        <input type="email"  name="email" id="email" tabindex="2"  class="form-control"  placeholder="eric.dupont@viseo.com"
+                                               v-model="email" @focus="isNewEmail = true; msgemail = false"  @blur="messageEmail" onfocus="this.placeholder = ''"
+                                               onblur="this.placeholder = 'eric.dupont@viseo.com'">
+                                        <span v-show="msgemail" class="color-red ">Email est obligatoire.</span>
+                                        <span v-show="email" class="color-red">{{ emailMsg }}</span>
                                         <span v-show="!isNewEmail" class="color-red ">Ce email a déjà été enregistré.</span>
                                     </div>
-
                                 </div>
-
                                 <!-- MOT DE PASSE -->
-
-                                <div class="form-group" :class="{'input': true, 'has-error': errors.has('mdp') || msgpwd }">
+                                <div class="form-group" :class="{'input': true, 'has-error': password || msgpwd }">
                                     <label for="mdp">Mot de passe</label>
-
                                     <div class="password" :class="{ 'control': true }">
                                         <i class="glyphicon glyphicon-lock"></i>
-                                        <span @click="showPass = !showPass" v-show="!showPass && collaborator.password" class="glyphicon glyphicon-eye-open" > </span>
-                                        <span @click="showPass = false" v-show="showPass && collaborator.password" class="glyphicon glyphicon-eye-close" > </span>
-                                        <input type="password" v-model="collaborator.password" v-show="!showPass" v-validate="'mdp'" name="mdp" id="mdp" tabindex="2" class="form-control" placeholder="••••••" onfocus="this.placeholder = ''" onblur="this.placeholder = '••••••'" @focus="msgpwd = false" @blur="messagePwd">
-                                        <input type="text" v-model="collaborator.password" v-show="showPass"v-validate="'mdp'" name="mdp" id="mdp2" tabindex="2" class="form-control" @focus="msgpwd = false" @blur="messagePwd" >
-                                        <span v-show="msgpwd && !errors.has('mdp')" class="color-red ">Mot de passe est obligatoire.</span>
-                                        <span v-show="errors.has('mdp')" class="color-red">{{ errors.first('mdp') }}</span>
+                                        <span @click="showPass = !showPass" v-show="!showPass && password" class="glyphicon glyphicon-eye-open"> </span>
+                                        <span @click="showPass = false" v-show="showPass && password" class="glyphicon glyphicon-eye-close"> </span>
+                                        <input type="password" v-model="password" v-show="!showPass" name="mdp" id="mdp" tabindex="2" class="form-control"
+                                               placeholder="••••••" onfocus="this.placeholder = ''" onblur="this.placeholder = '••••••'" @focus="msgpwd = false"
+                                               @blur="messagePwd">
+                                        <input type="text" v-model="password" v-show="showPass"  name="mdp" id="mdp2" tabindex="2" class="form-control"
+                                               @focus="msgpwd = false" @blur="messagePwd">
+                                        <span v-show="msgpwd"  class="color-red ">Mot de passe est obligatoire.</span>
+                                        <span v-show="password" class="color-red">{{ passwordMsg }}</span>
                                     </div>
-
                                 </div>
-
                                 <!-- CONFIRMATION MOT DE PASSE -->
-
-                                <div class="form-group" :class="{'input': true, 'has-error': errors.has('mdpc') || msgconfirmpwd }">
+                                <div class="form-group"   :class="{'input': true, 'has-error': confirmPassword || msgconfirmpwd }">
                                     <label for="mdpc">Confirmation mot de passe</label>
-
                                     <div class="password" :class="{ 'control': true }">
                                         <i class="glyphicon glyphicon-lock "></i>
-                                        <span @click="showPassConf = !showPassConf" v-show="!showPassConf && collaborator.confirmPassword" class="glyphicon glyphicon-eye-open " > </span>
-                                        <span @click="showPassConf = false" v-show="showPassConf && collaborator.confirmPassword" class="glyphicon glyphicon-eye-close " > </span>
-                                        <input type="password"  v-model="collaborator.confirmPassword" v-validate="'confirmed:mdp'" v-show="!showPassConf" name="mdpc" id="mdpc" tabindex="2" class="form-control" placeholder="••••••" onfocus="this.placeholder = ''" onblur="this.placeholder = '••••••'" @focus="msgconfirmpwd = false" @blur="messageConfirmpwd">
-                                        <input type="text"  v-model="collaborator.confirmPassword" v-validate="'confirmed:mdp'" v-show="showPassConf" name="mdpc" id="mdpc2" tabindex="2" class="form-control" @focus="msgconfirmpwd = false" @blur="messageConfirmpwd">
-                                        <span v-show="msgconfirmpwd && !errors.has('mdpc')" class="color-red ">Confirmation est obligatoire.</span>
-                                        <span v-show="errors.has('mdpc')" class="color-red">{{ errors.first('mdpc') }}</span>
+                                        <span @click="showPassConf = !showPassConf" v-show="!showPassConf && confirmPassword" class="glyphicon glyphicon-eye-open "> </span>
+                                        <span @click="showPassConf = false"  v-show="showPassConf && confirmPassword" class="glyphicon glyphicon-eye-close "> </span>
+                                        <input type="password" v-model="confirmPassword"  v-show="!showPassConf" name="mdpc" id="mdpc" tabindex="2" class="form-control"
+                                               placeholder="••••••"  onfocus="this.placeholder = ''" onblur="this.placeholder = '••••••'" @focus="msgconfirmpwd = false"
+                                               @blur="messageConfirmpwd">
+                                        <input type="text" v-model="confirmPassword" v-show="showPassConf" name="mdpc" id="mdpc2" tabindex="2" class="form-control"
+                                               @focus="msgconfirmpwd = false"  @blur="messageConfirmpwd">
+                                        <span v-show="msgconfirmpwd" class="color-red ">Confirmation est obligatoire.</span>
+                                        <span v-show="confirmPassword" class="color-red">{{ confirmPasswordMsg }}</span>
                                     </div>
-
                                 </div>
-
-
                                 <div class="form-group">
                                     <div class="row">
                                         <div class="col-xs-12 col-xm-12 col-md-6 cold-lg-6 col-lg-offset-3 col-md-offset-3">
-                                            <button type="submit" name="register-submit" id="register-submit" tabindex="4" class="form-control btn btn-primary" >S'inscrire</button>
+                                            <button type="submit" name="register-submit" id="register-submit"
+                                                    tabindex="4" class="form-control btn btn-primary">S'inscrire
+                                            </button>
                                         </div>
                                     </div>
                                 </div>
-
                             </form>
-
-
                         </div>
-
                     </div>
                 </div>
-
-
-
-
-
             </div>
-
-
-
         </div>
-
-
     </div>
 </div>
 </div>
 </div>
 
 </div>
-
 
 
 <script src="app/controller/registerCollaborator.js"></script>
