--- a/src/main/webapp/addTrainingTopic.html
+++ b/src/main/webapp/addTrainingTopic.html
@@ -129,11 +129,13 @@
                 </div>
 
                 <div style="width: 100%; height: 360px; overflow-y:hidden; border: 1px solid;" id="test">
-
+                    <input type="button" value="Scroll" id="scroll-up"/>
                     <table class="fix tabnonborder" >
 
                         <tbody>
-                        <tr><td><input type="button" value="Scroll" id="scroll-up" /></td></tr>
+                        <tr>
+                            <td></td>
+                        </tr>
                         <tr>
                             <td v-show="isEmptyFormation()" >Aucune formation n'a été créé.</td>
                             <td>
