--- a/src/main/webapp/addTrainingTopic.html
+++ b/src/main/webapp/addTrainingTopic.html
@@ -10,7 +10,7 @@
     <script src="lib/vue.js"></script>
     <script src="lib/vee-validate.js"></script>
     <script src="lib/vue-resource.js"></script>
-    <script type="text/javascript" src="lib/jquery.min.js"></script>
+    <script src="lib/jquery.min.js"></script>
 
     <title>AjouterFormation</title>
 </head>
